--- a/client/src/components/Timer/Timer.scss
+++ b/client/src/components/Timer/Timer.scss
@@ -5,6 +5,6 @@
     @include flex;
     @include flex-center;
     margin: 0;
-    font-size: 25px; 
+    font-size: 35px; 
     text-align: center;
 }
